// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component snapshots no tasks renders AddTask component without any tasks 1`] = `
<div
  className="sc-gZMcBi evxvFa"
>
  <div
    className="sc-gqjmRU ikogSX"
  >
    <a
      className="sc-dnqmqq krtygL"
      onClick={[Function]}
    >
      first card
    </a>
  </div>
  <div
    className="sc-bxivhb TDOcQ"
  >
    <a
      className="sc-EHOje iCMDbo"
      onClick={[Function]}
    >
      Add a task...
    </a>
  </div>
</div>
`;

exports[`Card component snapshots with tasks renders AddCard component and tasks 1`] = `
<div
  className="sc-gZMcBi evxvFa"
>
  <div
    className="sc-gqjmRU ikogSX"
  >
    <a
      className="sc-dnqmqq krtygL"
      onClick={[Function]}
    >
      first card
    </a>
    <div>
      <div
        aria-grabbed={false}
        className="sc-gzVnrw dbnHXy"
        draggable={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        style={
          Object {
            "pointerEvents": "auto",
            "transform": null,
            "transition": null,
          }
        }
        tabIndex={0}
      >
        <p
          className="sc-htoDjs kNRfwO"
        >
          first task
        </p>
      </div>
    </div>
    <div>
      <div
        aria-grabbed={false}
        className="sc-gzVnrw dbnHXy"
        draggable={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        style={
          Object {
            "pointerEvents": "auto",
            "transform": null,
            "transition": null,
          }
        }
        tabIndex={0}
      >
        <p
          className="sc-htoDjs kNRfwO"
        >
          second task
        </p>
      </div>
    </div>
  </div>
  <div
    className="sc-bxivhb TDOcQ"
  >
    <a
      className="sc-EHOje iCMDbo"
      onClick={[Function]}
    >
      Add a task...
    </a>
  </div>
</div>
`;
